--- a/System_Application.csproj
+++ b/System_Application.csproj
@@ -9,17 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Update="src\Resource1.Designer.cs">
+    <Compile Update="resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Resource1.resx</DependentUpon>
+      <DependentUpon>resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="src\Resource1.resx">
+    <EmbeddedResource Update="resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
+      <LastGenOutput>resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
